--- a/vignettes/riboscore.Rmd
+++ b/vignettes/riboscore.Rmd
@@ -3,9 +3,9 @@ title: "Riboscore : package to analyze RiboMethSeq data"
 author: "Théo COMBE, Hermes PARAQINDES, Janisse KIELBASSA, Emilie THOMAS, Anthony FERRARI and Virginie MARCEL"
 date: "`r format(Sys.Date(), '%m/%d/%Y')`"
 abstract: > 
-  RiboMethSeq is an innovative RNAseq-based approach, which has been developed in 2015 to analyze 2'O-ribose methylation (2'Ome) at all the sites of the ribosomal RNAs (rRNA) at once, in yeast [@birkedal2014]. RiboMethSeq approach was then transferred to human using the Illumina technology [@Marchand2016; @Erales2017; @Marcel2021]. Briefly, presence of 2'Ome protects the phosphodiester bond located at the 3' of the 2'Ome nucleotide from alkaline hydrolysis. Thus, the presence of 2'Ome at the given nucleotide n induces under-representation of RNA fragments starting at the nucleotide n+1  and an over-representation of RNA fragments ending at the nucleotide n-1, allowing to calculate a 2'Ome level at the corresponding nucleotide position n (or C-score) varying from 0 to 1 [@birkedal2014]. <br><br> This package can be used for any kind of RNA and organisms. The Riboscore package provides a set of easy-to-use functions to compute C-scores from RiboMethSeq end counts as input, adjust batch effect with ComBat-Seq, visualize your data and provide a table with the annotated human rRNA sites and their C-scores. Processing of the raw data to obtain end counts from sequencing data were previously described [@Marchand2016]. 
+  RiboMethSeq is an innovative RNAseq-based approach, which has been developed in 2015 to analyze 2'O-ribose methylation (2'Ome) at all the sites of the ribosomal RNAs (rRNA) at once, in yeast [@birkedal2014]. RiboMethSeq approach was then transferred to human using the Illumina technology [@Marchand2016; @Erales2017; @Marcel2021]. Briefly, presence of 2'Ome protects the phosphodiester bond located at the 3' of the 2'Ome nucleotide from alkaline hydrolysis. Thus, the presence of 2'Ome at the given nucleotide n induces under-representation of RNA fragments starting at the nucleotide n+1  and an over-representation of RNA fragments ending at the nucleotide n-1, allowing to calculate a 2'Ome level at the corresponding nucleotide position n (or C-score) varying from 0 to 1 [@birkedal2014]. <br><br> The Riboscore package can be used for any kind of RNA and organisms. This package provides a set of easy-to-use functions to compute C-scores from RiboMethSeq read end counts as input, adjust batch effect with ComBat-Seq, visualize the data and provide a table with the annotated human rRNA sites and their C-scores. Processing of the raw data to obtain read end counts from sequencing data were previously described [@Marchand2016]. 
 output:
-  html_document:
+  pdf_document:
       toc: true
       fig_width: 5
       fig_height: 5
@@ -29,7 +29,7 @@ library(Riboscore)
 
 # Installation
 
-You can install the latest Riboscore version on Bioconductor with :
+The latest version of Riboscore package can be installed from Bioconductor with :
 
 ```{r, eval=FALSE}
 if (!require("BiocManager", quietly = TRUE))
@@ -38,18 +38,19 @@ if (!require("BiocManager", quietly = TRUE))
 BiocManager::install("Riboscore")
 ```
 
-# Usage {#quickstart}
+# Usage 
 
 ```{r, eval = FALSE}
 library(Riboscore)
 
 ribo <- load_ribodata(
-              count_path ="/path/to/your/csvfiles/directory/",
+              count_path = "/path/to/your/csvfiles/directory/",
               metadata = "path/to/metadata.csv",
               metadata_key = "filename",
               metadata_id = "samplename")
 
-# Compute the c-score using different parameters, including calculation of the local coverage using the mean instead of the median
+# Compute the c-score using different parameters,
+# including calculation of the local coverage using the mean instead of the median
 ribo <- compute_cscore(ribo, method = "mean")
 
 # Adjust any technical biases using ComBat-Seq, thanks to the "library" column in metadata
@@ -75,21 +76,21 @@ This project has been funded by the French Cancer Institute (INCa, PLBIO 2019-13
 
 ## RiboClass
 
-The RiboClass is the object used by this package to contain both your data and metadata. It is created when calling load_ribodata (see [Loading data]).
+The RiboClass is the object used by this package to contain both your data and metadata. It is created when calling *load_ribodata* (see [Loading data]).
 
 It contains three main parts :
 
-1.  **Data** : a list of dataframe, containing for each sample the 5' and/or 3'-end counts provided by the user, and the calculated c-score.
+1.  **Data** : a list of dataframe, containing for each sample the 5' and/or 3' read-end counts provided by the user, and the calculated c-score.
 
 2.  **Metadata** : a dataframe, containing all the information related to the samples that can be provided by the user.
 
-3.  **RNA_names** : a dataframe, reporting the names of the RNA used in the data.
+3.  **RNA_names** : a dataframe, reporting the names of the RNA used in Data.
 
 A list of elements is also included in the RiboClass as a reminder of some main function calls' parameters.
 
 ## Loading data
 
-(For the purpose of this example, all parameters are shown)
+Here is an example, where all *load_ribodata* parameters are shown :
 
 ```{r}
 path <- system.file("extdata", package="Riboscore")
@@ -117,7 +118,7 @@ ribo <- load_ribodata(
 
 ## GenomeCov-like Count data
 
-To use this package, the user should provide the 5', 3' or 5'/3' read end counts resulting from RiboMethSeq data for each sample. They should be formatted as followed :
+To use this package, the user should provide one csv file with the 5’, 3’ or 5’/3’ read end counts resulting from RiboMethSeq data per sample. The folder structure containing the csv files is not important, as long as either the directory and its sub-directories contain the necessary csv files. 
 
 1.  The **name of the RNA** on which the read end counting has been performed
 
@@ -125,7 +126,7 @@ To use this package, the user should provide the 5', 3' or 5'/3' read end counts
 
 3.  The **value of the read end counts** at the position
 
-You can see a small example below :
+Here is an example :
 
 | RNA | Position on RNA | read end count |
 |-----|-----------------|----------------|
@@ -135,11 +136,9 @@ You can see a small example below :
 | 18S | 126             | 789            |
 | 18S | 127             | 1234           |
 
-Note: it is not necessary to provide an header in the count files, because column index can be used in the function load_ribodata, using *count_value*, *count_rnaid* and *count_pos* parameters
+Note 1: it is not necessary to provide an header in the count files, because column index can be used in the function *load_ribodata*, using *count_value*, *count_rnaid* and *count_pos* parameters
 
-The folder structure can be whatever you wish, as long as either the directory and its sub-directories contain the necessary CSV files.
-
-**If you do not specify metadata, Riboscore will try to fetch any CSV files in the folder specified by count_path parameter and its subfolders.**
+Note 2: if no metadata is specified, Riboscore will try to fetch any csv files in the folder specified in count_path and its subfolders.
 
 ## Metadata
 
@@ -151,7 +150,7 @@ The folder structure can be whatever you wish, as long as either the directory a
 
 Following these two compulsory columns, provide as many columns as needed for the analysis.
 
-In the following example, let's imagine you have three samples, and thus three CSV files. Your metadata should look like this :
+Here is an example of metadata for three samples:
 
 +--------------+--------------+----------------------+
 | filename     | samplename   | biological condition |
@@ -165,9 +164,9 @@ In the following example, let's imagine you have three samples, and thus three C
 | sample3.csv  | sample 3     | condition 2          |
 +--------------+--------------+----------------------+
 
-: Example of metadata that should be given to the package. The column "biological condition" serves as an example of a metadata column and is not mandatory.
+Note: if no metadata are provided in load_ribodata, an empty metadata will be created with pre-completed filename and samplename columns. The samplename column will include the basename of filename.
 
-Note: if no metadata are provided in load_ribodata, an empty metadata will be created with pre-completed filename and samplename columns. The column samplename will include the basename of filename
+Here is an example of auto-generated metadata : 
 
 | filename    | samplename  |
 |-------------|-------------|
@@ -176,6 +175,16 @@ Note: if no metadata are provided in load_ribodata, an empty metadata will be cr
 | sample3.csv | sample3.csv |
 
 : Example of auto-generated metadata. Samplename will be identical to filename by default, but you can modify this column.
+
+## RNA names
+
+RNA names are stored in an auto-generated dataframe when loading data. It contains two columns :
+
+1.  **original_name** : original name of each RNA (e.g NR_023363.1)
+
+2.  **current_name** : current name of each RNA, reflecting any user's change with *rename_rna* function (see [Rename RNA])
+
+This dataframe is used to keep track of the original name, which often contains NCBI's accession ID.
 
 # C-score calculation
 
@@ -233,7 +242,7 @@ In this example, the technical replicates RNA1 and RNA2 included in library 1 an
 Batch effect of RiboMethSeq data can be adjusted using the ComBat-seq method (Paraqindes et al, in preparation); @zhang2020 . The Riboscore package includes a wrapper (adjust_bias) to perform ComBat-seq adjustment that will return a new RiboClass with adjusted end count values and C-scores automatically recomputed with the same setup parameters.
 
 ```{r}
-ribo_adjusted <- adjust_bias(ribo,"run")
+ribo_adjusted <- adjust_bias(ribo, batch = "run")
 ```
 
 Batch effect adjustment can be verified using the plot_PCA function using the new RiboClass:
@@ -247,7 +256,7 @@ After batch effect adjustment using ComBat-seq method, the two technical replica
 # Sample manipulation 
 ## Keep or remove samples
 
-A sample subset can be easily analyzed by indicating the samples to keep or to remove. The user can thus create a new RiboClass object containing the data and metadata of the samples of interest.
+A sample subset can be easily analyzed by indicating the samples to keep or to remove. The user can thus create a new RiboClass object containing the data and metadata of the samples of interest. In both cases, only the remaining samples’ metadata are kept in the RiboClass object, so no manual updating is required. 
 
 Here is an example to generate a new RiboClass by keeping two samples of interest ("2400" and "3307"):
 
@@ -272,38 +281,42 @@ in both cases, only the remaining samples' metadata are kept in the RiboClass ob
 
 ### Remove RNA
 
-You can remove a RNA among all your RiboClass' samples if it is not necessary for your analysis. Here, we do not need the 5S rRNA.
+A RNA subset can be easily analyzed by indicating the RNA to remove. The user can thus create a new RiboClass object containing the data of the RNAs of interest, without affecting the samples’ metadata. 
 
+Here is an example where the RNA 5S is removed:
 ```{r}
-ribo_adjusted <- remove_rna(ribo,"NR_023363.1_5S")
+ribo_adjusted <- remove_rna(ribo, rna_to_remove = "NR_023363.1_5S")
 print(ribo_adjusted)
 ```
 
 ### Rename RNA
 
-Annotation of rRNA 2'Ome sites using the lists provided by this package, requires the usage of specific RNA names.
+Annotation of rRNA 2'Ome sites using the lists provided by this package requires the usage of specific RNA names.
 
 Here is an example to check whether the RNA names provided by the user in the RiboClass match the ones used by this package :
 
 ```{r}
-cat("human_methylated's rna names :",unique(human_methylated$rRNA),"\n")
-cat("ribo's rna names :",as.character(ribo_adjusted$rna_names$current_name))
+data("human_methylated")
+cat("human_methylated's rna names :", unique(human_methylated$rRNA),"\n")
+cat("ribo's rna names :", as.character(ribo_adjusted$rna_names$current_name))
 ```
 
-Here, the names are different and need to be updated before annotation.
+In this example, the names are different and need to be updated before annotation.
 
 The function rename_rna updates automatically the rRNA names that are given by rRNA size order:
 
 ```{r}
-ribo_adjusted <- rename_rna(ribo_adjusted, c("5.8S","18S","28S")) # from the shortest RNA in our RiboClass to the longest !
+ribo_adjusted <- rename_rna(ribo_adjusted,
+                            new_names = c("5.8S", "18S", "28S")) 
+                            # from the shortest RNA in our RiboClass to the longest.
 
 ```
 
-## RNA 2'Ome sites annotations
+## Annotation of RNA 2'Ome sites
 
-### Included : Human 2'Ome Rrna sites annotations
+This package computes a C-score for each genomic position of the RNAs. The C-scores of the RNA 2’Ome sites of interest are then extracted using a list of annotated sites and the annotate function.
 
-This package computes a C-score for each genomic position of the RNAs. The C-scores of the RNA 2'Ome sites of interest are then extracted using a list of annotated sites.
+### Annotation included: Human 2’Ome rRNA sites 
 
 By default, this package includes two dataframes including the positions and the annotations of the human rRNA 2'Ome sites:
 
@@ -313,15 +326,15 @@ By default, this package includes two dataframes including the positions and the
 
 ### Customize 2'Ome sites annotations
 
-Instead of using the list of rRNA 2'Ome sites included with this package, the user can provide its own list and annotation using the function annotate_site.
+Instead of using the list of human rRNA 2'Ome sites included with this package, the user can provide its own list and annotation using the function annotate_site.
 
 A dataframe with three compulsory columns should be provided:
 
--   RNA name : the name of the RNA, matching the RNA name of the RiboClass.
+-   **RNA name** : the name of the RNA, matching the RNA name of the RiboClass.
 
--   Position on RNA : the number of the position on the RNA.
+-   **Position on RNA** : the number of the position on the RNA.
 
--   Nomenclature : the name given to the site of interest.
+-   **Nomenclature** : the name given to the site of interest.
 
 You can see an example below :
 
@@ -331,23 +344,11 @@ You can see an example below :
 | 76       | 5.8S | Gm75         |
 | 28       | 18S  | Am27         |
 
-: Example of annotation in human_methylated
-
-```{r,eval=FALSE}
-ribo <- annotate_site(ribo,
-                      annot = my_new_annotation,
-                      anno_rna = "rRNA",
-                      anno_pos = "Position",
-                      anno_value = "Nomenclature")
-```
-
-Other columns in your annotation table will be ignored.
-
 ## Annotate RNA sites {#annotate-sites}
 
-Among the thousands sites belonging to the rRNA, some of them are more particular than others. In our case, we are interested by 2'Ome sites in the human model.
+The 2’Ome sites of interest can be annotated using the annotate function with either the provided annotations or customized ones.
 
-We can **annotate these sites with the included *human_methylated* dataset** :
+Here is an example with the provided human methylated annotations:
 
 ```{r}
 ribo_adjusted <- annotate_site(ribo_adjusted,
@@ -357,15 +358,13 @@ ribo_adjusted <- annotate_site(ribo_adjusted,
                                anno_value = "Nomenclature")
 ```
 
-If there is a problem with the RNA names, you should check [Rename RNA].
+Note: If an issue occurs during the annotation process, the user should check the [Rename RNA] section.
 
 This vignette has also some explanations on how to create your own sites annotation dataset with [Customize 2'Ome sites annotations].
 
-# Data visualisation
+# Data visualization with PCA
 
-## Visualization with PCA
-
-The function plot_PCA that returns a ggplot has been implemented with several parameters for more flexibility:
+The function plot_PCA, which returns a ggplot, has been implemented with several parameters for more flexibility:
 
 1.  **only_annotated**: plot samples based on the annotated RNA 2'Ome sites only to determine whether samples clustered depending on their rRNA 2'Ome profile.
 
@@ -413,10 +412,10 @@ By default, it will export c-score for all the genomic RNA positions. The user c
 ```{r}
 ribo_df <- extract_data(ribo_adjusted,
                         col = "cscore",
-                        only_annotated = T)
+                        only_annotated = TRUE)
 ```
 
-```{r}
+```{r, echo=FALSE}
 knitr::kable(ribo_df[1:10,1:4],caption = "excerpt from the output dataframe")
 ```
 
@@ -432,7 +431,7 @@ ggplot_table <- format_to_plot(ribo_adjusted,"condition")
 ```
 
 ```{r,echo=FALSE}
-knitr::kable(ggplot_table[501:510,],caption = "excerpt from the output dataframe")
+knitr::kable(ggplot_table[501:510,], caption = "excerpt from the output dataframe")
 ```
 
 ## Export as a dataframe by condition
