--- a/vignettes/riboscore.Rmd
+++ b/vignettes/riboscore.Rmd
@@ -1,16 +1,16 @@
 ---
-title: "Riboscore : package to analyze RiboMethSeq data"
+title: "Riboscore: package to analyze RiboMethSeq data"
 author: "Théo COMBE, Hermes PARAQINDES, Janisse KIELBASSA, Emilie THOMAS, Anthony FERRARI and Virginie MARCEL"
 date: "`r format(Sys.Date(), '%m/%d/%Y')`"
 abstract: > 
   RiboMethSeq is an innovative RNAseq-based approach, which has been developed in 2015 to analyze 2'O-ribose methylation (2'Ome) at all the sites of the ribosomal RNAs (rRNA) at once, in yeast [@birkedal2014]. RiboMethSeq approach was then transferred to human using the Illumina technology [@Marchand2016; @Erales2017; @Marcel2021]. Briefly, presence of 2'Ome protects the phosphodiester bond located at the 3' of the 2'Ome nucleotide from alkaline hydrolysis. Thus, the presence of 2'Ome at the given nucleotide n induces under-representation of RNA fragments starting at the nucleotide n+1  and an over-representation of RNA fragments ending at the nucleotide n-1, allowing to calculate a 2'Ome level at the corresponding nucleotide position n (or C-score) varying from 0 to 1 [@birkedal2014]. <br><br> The Riboscore package can be used for any kind of RNA and organisms. This package provides a set of easy-to-use functions to compute C-scores from RiboMethSeq read end counts as input, adjust batch effect with ComBat-Seq, visualize the data and provide a table with the annotated human rRNA sites and their C-scores. Processing of the raw data to obtain read end counts from sequencing data were previously described [@Marchand2016]. 
 output:
-  pdf_document:
+   html_vignette:
       toc: true
       fig_width: 5
       fig_height: 5
 vignette: >
-  %\VignetteIndexEntry{riboscore}
+  %\VignetteIndexEntry{Riboscore: package to analyze RiboMethSeq data}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 bibliography: references.bib
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
+```{r setup, include=FALSE}
 library(Riboscore)
 ```
 
@@ -53,7 +53,8 @@ ribo <- load_ribodata(
 # including calculation of the local coverage using the mean instead of the median
 ribo <- compute_cscore(ribo, method = "mean")
 
-# Adjust any technical biases using ComBat-Seq, thanks to the "library" column in metadata
+# If necessary, adjust any technical biases using ComBat-Seq.
+# Here, as an example, we use the "library" column in metadata.
 ribo <- adjust_bias(ribo,"library")
 
 # Plot a Principal Component Analysis (PCA) whose colors depend on the "condition" column in metadata
@@ -64,7 +65,7 @@ plot_PCA(ribo,"condition")
 
 To report a bug or any suggestion to improve the package, please let us known by opening a new issue on: *github issue link coming soon!*
 
-# Acknowledgement
+# Acknowledgements
 
 We would like to thank all our collaborators for their advices and suggestions.
 
@@ -76,17 +77,17 @@ This project has been funded by the French Cancer Institute (INCa, PLBIO 2019-13
 
 ## RiboClass
 
-The RiboClass is the object used by this package to contain both your data and metadata. It is created when calling *load_ribodata* (see [Loading data]).
+RiboClass is the main class of the package that allows to store both the data matrices (counts and c-scores) and the associated metadata. It is automatically created when calling *load_ribodata* (see [Loading data]).
 
-It contains three main parts :
+It is a list containing three main elements, individually described below:
 
-1.  **Data** : a list of dataframe, containing for each sample the 5' and/or 3' read-end counts provided by the user, and the calculated c-score.
+1.  **Data**: a list of dataframe, containing for each sample the 5' and/or 3' read-end counts provided by the user, and the calculated c-score.
 
-2.  **Metadata** : a dataframe, containing all the information related to the samples that can be provided by the user.
+2.  **Metadata**: a dataframe, containing all the information related to the samples that can be provided by the user.
 
-3.  **RNA_names** : a dataframe, reporting the names of the RNA used in Data.
+3.  **RNA_names**: a dataframe, reporting the names of the RNA used in Data.
 
-A list of elements is also included in the RiboClass as a reminder of some main function calls' parameters.
+ Some main function calls’ parameters (such as the normalization method used for c-score computation) are also kept in the RiboClass object as a reminder.
 
 ## Loading data
 
@@ -116,7 +117,7 @@ ribo <- load_ribodata(
                       ncores = 1)
 ```
 
-## GenomeCov-like Count data
+## Data
 
 To use this package, the user should provide one csv file with the 5’, 3’ or 5’/3’ read end counts resulting from RiboMethSeq data per sample. The folder structure containing the csv files is not important, as long as either the directory and its sub-directories contain the necessary csv files. 
 
@@ -142,13 +143,13 @@ Note 2: if no metadata is specified, Riboscore will try to fetch any csv files i
 
 ## Metadata
 
-[Two columns are compulsory for the metadata dataframe:]{.underline}
+[Two columns are mandatory for the metadata dataframe:]{.underline}
 
-1.  filename: name of the csv file on disk containing the end counts described above. Do not modify it unless the filename has changed on disk.
+1.  **filename**: name of the csv file on disk containing the read end counts described above. Do not modify it unless the filename has changed on disk.
 
-2.  samplename: rename the samples, which will be analyzed and shown on the plots. This column could be modified, as long as the sample names are unique.
+2.  **samplename**: rename the samples, which will be analyzed and shown on the plots. This column could be modified, as long as the sample names are unique.
 
-Following these two compulsory columns, provide as many columns as needed for the analysis.
+Following these two mandatory columns, provide as many columns as needed for the analysis.
 
 Here is an example of metadata for three samples:
 
@@ -164,9 +165,9 @@ Here is an example of metadata for three samples:
 | sample3.csv  | sample 3     | condition 2          |
 +--------------+--------------+----------------------+
 
-Note: if no metadata are provided in load_ribodata, an empty metadata will be created with pre-completed filename and samplename columns. The samplename column will include the basename of filename.
+Note: if no metadata are provided in load_ribodata, an empty metadata will be created with pre-completed "filename" and "samplename" columns. The "samplename" column will be identical to "filename", but can be modified by the user.
 
-Here is an example of auto-generated metadata : 
+Here is an example of auto-generated metadata:
 
 | filename    | samplename  |
 |-------------|-------------|
@@ -174,17 +175,26 @@ Here is an example of auto-generated metadata :
 | sample2.csv | sample2.csv |
 | sample3.csv | sample3.csv |
 
-: Example of auto-generated metadata. Samplename will be identical to filename by default, but you can modify this column.
 
 ## RNA names
 
 RNA names are stored in an auto-generated dataframe when loading data. It contains two columns :
 
-1.  **original_name** : original name of each RNA (e.g NR_023363.1)
+1.  **original_name**: original name of each RNA (e.g NR_023363.1)
 
-2.  **current_name** : current name of each RNA, reflecting any user's change with *rename_rna* function (see [Rename RNA])
+2.  **current_name**: current name of each RNA, reflecting any user's change with *rename_rna* function (see [Rename RNA])
 
 This dataframe is used to keep track of the original name, which often contains NCBI's accession ID.
+
+Here is an example:
+
+| original_name    | current_name  |
+|------------------|---------------|
+| NR_023363.1_5S   | 5S            |
+| NR_046235.3_5.8S | 5.8S          |
+| NR_046235.3_18S  | 18S           |
+| NR_046235.3_28S  | 28S           |
+
 
 # C-score calculation
 
@@ -198,7 +208,7 @@ By default, the computation method of the local coverage corresponds to the **me
 
 ## C-score computation when loading data
 
-When the function load_ribodata is used, a C-score is automatically computed for all genomic positions of the RNA. The C-score is computed using either the default parameters of the load_ribodata function or the user's parameters as followed:
+When the function *load_ribodata* is used, a C-score is automatically computed for all genomic positions of the RNA. The C-score is computed using either the default parameters of the *load_ribodata* function or the user's parameters as followed:
 
 ```{r, eval=FALSE}
 load_ribodata(count.path = "/path/to/csv/",
@@ -218,7 +228,7 @@ In the following example, both the flanking region's size of the local coverage 
 
 ```{r,eval=FALSE}
 ribo <- compute_cscore(ribo,
-                       flanking = 8,
+                       flanking = 4,
                        method = "mean")
 ```
 
@@ -230,6 +240,8 @@ Note: this function will override the previous c-score of the RiboClass.
 
 Technical bias (i.e., batch effect) can be identified by plotting C-scores at all the genomic positions of the RNA for each sample on a PCA (see also [Visualization with PCA] for more usages).
 
+Here is an example:
+
 ```{r}
 plot_PCA(ribo = ribo,
          color_col = "run")
@@ -239,7 +251,7 @@ In this example, the technical replicates RNA1 and RNA2 included in library 1 an
 
 ## Batch effect adjustment
 
-Batch effect of RiboMethSeq data can be adjusted using the ComBat-seq method (Paraqindes et al, in preparation); @zhang2020 . The Riboscore package includes a wrapper (adjust_bias) to perform ComBat-seq adjustment that will return a new RiboClass with adjusted end count values and C-scores automatically recomputed with the same setup parameters.
+Batch effect of RiboMethSeq data can be adjusted using the ComBat-seq method (Paraqindes et al, in preparation; @zhang2020) . The Riboscore package includes a wrapper (adjust_bias) to perform ComBat-seq adjustment that will return a new RiboClass with adjusted read end count values and C-scores automatically recomputed with the same setup parameters.
 
 ```{r}
 ribo_adjusted <- adjust_bias(ribo, batch = "run")
@@ -258,18 +270,18 @@ After batch effect adjustment using ComBat-seq method, the two technical replica
 
 A sample subset can be easily analyzed by indicating the samples to keep or to remove. The user can thus create a new RiboClass object containing the data and metadata of the samples of interest. In both cases, only the remaining samples’ metadata are kept in the RiboClass object, so no manual updating is required. 
 
-Here is an example to generate a new RiboClass by keeping two samples of interest ("2400" and "3307"):
+Here is an example to generate a new RiboClass by keeping two samples of interest ("S1" and "S2"):
 
 ```{r}
-ribo_2samples <- keep_ribo_samples(ribo_adjusted,c("938","2633"))
+ribo_2samples <- keep_ribo_samples(ribo_adjusted,c("S1","S2"))
 print(ribo_2samples)
 
 ```
 
-Here is an example to generate a new RiboClass by removing two samples ("2400" and "3307"):
+Here is an example to generate a new RiboClass by removing two samples ("S1" and "S2"):
 
 ```{r}
-ribo_removed_samples <- remove_ribo_samples(ribo,c("938","2633"))
+ribo_removed_samples <- remove_ribo_samples(ribo,c("S1","S1"))
 print(ribo_removed_samples)
 ```
 
@@ -297,8 +309,8 @@ Here is an example to check whether the RNA names provided by the user in the Ri
 
 ```{r}
 data("human_methylated")
-cat("human_methylated's rna names :", unique(human_methylated$rRNA),"\n")
-cat("ribo's rna names :", as.character(ribo_adjusted$rna_names$current_name))
+cat("human_methylated's rna names: ", unique(human_methylated$rRNA),"\n")
+cat("ribo's rna names: ", as.character(ribo_adjusted$rna_names$current_name))
 ```
 
 In this example, the names are different and need to be updated before annotation.
@@ -328,13 +340,13 @@ By default, this package includes two dataframes including the positions and the
 
 Instead of using the list of human rRNA 2'Ome sites included with this package, the user can provide its own list and annotation using the function annotate_site.
 
-A dataframe with three compulsory columns should be provided:
+A dataframe with three mandatory columns should be provided :
 
--   **RNA name** : the name of the RNA, matching the RNA name of the RiboClass.
+-   **RNA name**: the name of the RNA, matching the RNA name of the RiboClass.
 
--   **Position on RNA** : the number of the position on the RNA.
+-   **Position on RNA**: the number of the position on the RNA.
 
--   **Nomenclature** : the name given to the site of interest.
+-   **Nomenclature**: the name given to the site of interest.
 
 You can see an example below :
 
@@ -398,16 +410,18 @@ pca <- plot_PCA(ribo_adjusted,
 
 Data can be exported as two different objects.
 
-## Export as a single matrix
+## Export as a dataframe
 
-The user can export data as a single dataframe using the function extract_data.
+The user can export data as a dataframe using the function extract_data.
+
+By default, it will export c-score for all the genomic RNA positions.
 
 ```{r}
 ribo_df <- extract_data(ribo_adjusted,
                         col = "cscore")
 ```
 
-By default, it will export c-score for all the genomic RNA positions. The user can export information related to the subset of annotated RNA 2'Ome sites by setting the only_annotated parameter to True.
+The user can export data related to the subset of annotated RNA 2’Ome sites by setting the *only_annotated* parameter to True.
 
 ```{r}
 ribo_df <- extract_data(ribo_adjusted,
@@ -416,14 +430,16 @@ ribo_df <- extract_data(ribo_adjusted,
 ```
 
 ```{r, echo=FALSE}
-knitr::kable(ribo_df[1:10,1:4],caption = "excerpt from the output dataframe")
+knitr::kable(ribo_df[1:10,1:4],caption = "excerpt from the output dataframe. S1, S2 and S3 are samples.")
 ```
 
 ## Export as a ggplot-ready dataframe
 
 The user can export data as a ggplot-ready dataframe using the function format_to_plot.
 
-By default, it will export c-score for all the genomic RNA positions. The user can export additional information present in the metadata by indicating the name of the column of interest. The user can export information related to the subset of annotated RNA 2'Ome sites by setting the only_annotated parameter to True. Here is an example of ggplot-ready dataframe including the C-scores of all the genomic RNA positions as well as the condition related to the particular sample of interest:
+By default, it will export c-score for all the genomic RNA positions. The user can export additional information present in the metadata by indicating the name of the column of interest. The user can export information related to the subset of annotated RNA 2'Ome sites by setting the only_annotated parameter to True. 
+
+Here is an example of ggplot-ready dataframe including the C-scores of all the genomic RNA positions as well as the condition related to the particular sample of interest:
 
 ```{r}
 ggplot_table <- format_to_plot(ribo_adjusted,"condition")
@@ -431,14 +447,16 @@ ggplot_table <- format_to_plot(ribo_adjusted,"condition")
 ```
 
 ```{r,echo=FALSE}
-knitr::kable(ggplot_table[501:510,], caption = "excerpt from the output dataframe")
+knitr::kable(ggplot_table[501:510,], caption = "Excerpt from the output ggplot-ready dataframe")
 ```
 
 ## Export as a dataframe by condition
 
 The user can export a dataframe compiling the mean C-scores of each position by specific conditions provided in the metadata dataframe using the mean_samples_by_conditon function.
 
-By default, it will export for all the genomic RNA positions the name of the position, the mean and sd of the C-scores. The user can export mean and sd of "end count". The user can export information related to the subset of annotated RNA 2'Ome sites by setting the only_annotated parameter to True. Here is an example of dataframe including the mean C-scores per conditions for all the genomic RNA positions:
+By default, it will export for all the genomic RNA positions the name of the position, the mean and sd of the C-scores. The user can also export mean and sd of read end count. The user can export information related to the subset of annotated RNA 2'Ome sites by setting the only_annotated parameter to True.
+
+Here is an example of dataframe including the mean C-scores per conditions for all the genomic RNA positions:
 
 ```{r}
 mean_tb <- mean_samples_by_conditon(ribo_adjusted,
@@ -448,7 +466,13 @@ mean_tb <- mean_samples_by_conditon(ribo_adjusted,
 ```
 
 ```{r,echo=FALSE}
-knitr::kable(mean_tb[1:10,],caption = "excerpt from the output dataframe")
+knitr::kable(mean_tb[1:10,],caption = "Excerpt from the output dataframe by condition")
+```
+
+# Sessioninfo
+
+```{r}
+sessionInfo()
 ```
 
 # Reference
